# Projects-on-Class-in-BIT

Project1/: CMakeLists.txt  main.cpp
Project1/ensurewindow/: ensure.cpp  ensure.h  ensurewindow.cpp  ensurewindow.h  ensurewindow.ui
Project1/gobangwindow/: gobang.cpp  gobang.h  gobangwindow.cpp  gobangwindow.h  gobangwindow.ui
Project1/picksidewindow/: picksidewindow.cpp  picksidewindow.h  picksidewindow.ui
Project1/settingwindow/: settingwindow.cpp  settingwindow.h  settingwindow.ui
Project1/startwindow/: startwindow.cpp  startwindow.h  startwindow.ui
